# talk2dashboard

./: .env.example  .gitignore  Makefile  README.md  README_EN.md  TECH_SPEC.md  alembic.ini  pyproject.toml  tokens.css
.hallmark/: log.json
data/evaluation/: cases.json
data/fixtures/: operational_snapshot.json
design_explorations/: README.md  atlas-focus.css  atlas-focus.html  briefing-wall.css  briefing-wall.html  control-room.css  control-room.html  field-glass.css  field-glass.html  index.css  index.html  prototype.js  shared.css  signal-desk.css  signal-desk.html
docs/: IJMUIDEN_INCIDENT_ANALYSIS.md  IJMUIDEN_INCIDENT_ANALYSIS_EN.md  PORTFOLIO_DEMO.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_feedback_hardening.py
scripts/: __init__.py  run_fixture_app.py  smoke_live_sources.py  sync_elevenlabs_agent.py  test_elevenlabs_agent_routing.py
src/talk2dashboard/: __init__.py  agent_catalog.py  agent_prompt.py  capture.py  claims.py  config.py  context_locations.py  dashboard.py  deterministic.py  domain.py  errors.py  evidence.py  incidents.py  locations.py  main.py  maintenance.py  planning.py  (+3 more)
tests/: conftest.py  test_agent_contracts.py  test_context_locations.py  test_dashboard_state.py  test_elevenlabs_agent_acceptance.py  test_evaluation_contract.py  test_evidence.py  test_feedback_hardening.py  test_google_maps_asset.py  test_live_sources.py  test_maintenance.py  test_migrations.py  test_panel_contracts.py  test_policies.py  test_query_and_handles.py  test_renderer_layout.py  test_speech.py  test_startup_planner.py  test_tool_executor.py
voice_dock/: eslint.config.js  package-lock.json  package.json  vite.config.ts
(+42 files in other folders)
